--- a/AuthenticationApp/src/AuthServer/appsettings.json
+++ b/AuthenticationApp/src/AuthServer/appsettings.json
@@ -12,7 +12,7 @@
 	"AllowedHosts": "*",
 	"IdentityServer": {
 		"Clients": {
-			"CleanArchitecture.WebUI": {
+			"AuthenticationApp": {
 				"Profile": "IdentityServerSPA"
 			}
 		}
