--- a/AuthenticationApp/src/AuthServer/Frontend/package.json
+++ b/AuthenticationApp/src/AuthServer/Frontend/package.json
@@ -2,8 +2,10 @@
   "name": "authentication-frontend",
   "version": "0.1.0",
   "dependencies": {
+    "oidc-client": "^1.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
     "twin.macro": "^1.10.0"
@@ -16,7 +18,7 @@
   },
   "babelMacros": {
     "twin": {
-      "config": "tailwind.config.js",
+      "config": "src/tailwind.config.js",
       "preset": "styled-components",
       "autoCssProp": true,
       "debugProp": true,
