Changes after testing production build

--- a/AuthenticationApp/src/AuthServer/AuthServer.csproj
+++ b/AuthenticationApp/src/AuthServer/AuthServer.csproj
@@ -23,8 +23,9 @@
 
   <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
+    <None Update="20years.pfx" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
   </ItemGroup>
-
+  
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Content Remove="$(SpaRoot)**" />
