--- a/AuthenticationApp/src/AuthServer/appsettings.Production.json
+++ b/AuthenticationApp/src/AuthServer/appsettings.Production.json
@@ -1,7 +1,9 @@
 {
-  "IdentityServer": {
-    "Key": {
-      "Type": "Development"
-    }
-  }
+	"IdentityServer": {
+		"Key": {
+			"Type": "File",
+			"FilePath": "20years.pfx",
+			"Password": ""
+		}
+	}
 }
