--- a/AuthenticationApp/src/AuthServer/AuthServer.csproj
+++ b/AuthenticationApp/src/AuthServer/AuthServer.csproj
@@ -16,6 +16,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AuthServer.Infrastructure\AuthServer.Infrastructure.csproj" />
@@ -23,9 +27,33 @@
   
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="Frontend\build\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="Frontend\build\**" />
+    <EmbeddedResource Remove="Frontend\build\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="Frontend\build\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Remove="Frontend\.env" />
+    <None Remove="Frontend\.env.production.local" />
+    <None Remove="Frontend\build\asset-manifest.json" />
+    <None Remove="Frontend\build\devchallenges.png" />
+    <None Remove="Frontend\build\index.html" />
+    <None Remove="Frontend\build\precache-manifest.1231f021a537d6d052a772a570208053.js" />
+    <None Remove="Frontend\build\service-worker.js" />
+    <None Remove="Frontend\build\static\css\main.1da4d105.chunk.css" />
+    <None Remove="Frontend\build\static\css\main.1da4d105.chunk.css.map" />
+    <None Remove="Frontend\build\static\js\2.b5299707.chunk.js" />
+    <None Remove="Frontend\build\static\js\2.b5299707.chunk.js.LICENSE.txt" />
+    <None Remove="Frontend\build\static\js\2.b5299707.chunk.js.map" />
+    <None Remove="Frontend\build\static\js\main.a1e36ad8.chunk.js" />
+    <None Remove="Frontend\build\static\js\main.a1e36ad8.chunk.js.map" />
+    <None Remove="Frontend\build\static\js\runtime-main.6a142501.js" />
+    <None Remove="Frontend\build\static\js\runtime-main.6a142501.js.map" />
+    <None Remove="tempkey.jwk" />
   </ItemGroup>
   
   <ItemGroup>
