--- a/AuthenticationApp/src/AuthServer/Properties/launchSettings.json
+++ b/AuthenticationApp/src/AuthServer/Properties/launchSettings.json
@@ -1,12 +1,13 @@
 ﻿{
-  "profiles": {
-      "AuthServer": {
-      "commandName": "Project",
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:44343;http://localhost:8080",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
-  }
+	"profiles": {
+		"AuthServer": {
+			"commandName": "Project",
+			"launchBrowser": false,
+			"applicationUrl": "https://localhost:44343;http://localhost:8080",
+			"environmentVariables": {
+				"ASPNETCORE_ENVIRONMENT": "Development",
+				"OIDC_CLIENT_URI": "https://rc-auth-app.herokuapp.com"
+			}
+		}
+	}
 }
