--- a/AuthenticationApp/src/AuthServer/AuthServer.csproj
+++ b/AuthenticationApp/src/AuthServer/AuthServer.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
+    <None Update="app.db" CopyToOutputDirectory="Always" ExcludeFromSingleFile="true" />
   </ItemGroup>
 
   <ItemGroup>
