Added profile picture upload

--- a/AuthenticationApp/src/AuthServer/appsettings.json
+++ b/AuthenticationApp/src/AuthServer/appsettings.json
@@ -9,12 +9,6 @@
 			"Microsoft.Hosting.Lifetime": "Information"
 		}
 	},
-	"AllowedHosts": "*",
-	"IdentityServer": {
-		"Clients": {
-			"AuthenticationApp": {
-				"Profile": "IdentityServerSPA"
-			}
-		}
-	}
+	"AllowedHosts": "*"
+
 }
