--- a/AuthenticationApp/src/AuthServer.Infrastructure/AuthServer.Infrastructure.csproj
+++ b/AuthenticationApp/src/AuthServer.Infrastructure/AuthServer.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="3.1.3" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.0" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
