--- a/AuthenticationApp/src/AuthServer/AuthServer.csproj
+++ b/AuthenticationApp/src/AuthServer/AuthServer.csproj
@@ -42,6 +42,10 @@
     <None Remove="Frontend\.env.production.local" />
     <None Remove="tempkey.jwk" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Frontend\src\images\" />
+  </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
