--- a/ChatGroup/src/ChatGroup.Application/ChatGroup.Application.csproj
+++ b/ChatGroup/src/ChatGroup.Application/ChatGroup.Application.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="GraphQL" Version="3.0.0.2026" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.8" />
   </ItemGroup>
 
 </Project>
