--- a/ChatGroup/src/ChatGroup/ChatGroup.csproj
+++ b/ChatGroup/src/ChatGroup/ChatGroup.csproj
@@ -5,16 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="4.0.1" />
-    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="4.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Application\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\ChatGroup.Application\ChatGroup.Application.csproj" />
+    <ProjectReference Include="..\ChatGroup.Infrastructure\ChatGroup.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
