--- a/ChatGroup/src/ChatGroup.Infrastructure/ChatGroup.Infrastructure.csproj
+++ b/ChatGroup/src/ChatGroup.Infrastructure/ChatGroup.Infrastructure.csproj
@@ -9,6 +9,11 @@
     <PackageReference Include="GraphQL.Server.Ui.Playground" Version="4.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChatGroup.Application\ChatGroup.Application.csproj" />
   </ItemGroup>
 
 </Project>
