--- a/ChatGroup/src/ChatGroup/appsettings.json
+++ b/ChatGroup/src/ChatGroup/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "UseSqlite": false,
+  "ConnectionStrings": {
+    "SqliteConnection": "DataSource=app.db;Cache=Shared;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
