--- a/ChatGroup/src/ChatGroup/appsettings.json
+++ b/ChatGroup/src/ChatGroup/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "UseSqlite": false,
+  "UseSqlite": true,
   "ConnectionStrings": {
     "SqliteConnection": "DataSource=app.db;Cache=Shared;"
   },
