--- a/ChatGroup/src/ChatGroup.Application/ChatGroup.Application.csproj
+++ b/ChatGroup/src/ChatGroup.Application/ChatGroup.Application.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL" Version="3.0.0.2026" />
+    <PackageReference Include="GraphQL.Authorization" Version="3.0.43" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.8" />
