--- a/ChatGroup/src/ChatGroup/ClientApp/package.json
+++ b/ChatGroup/src/ChatGroup/ClientApp/package.json
@@ -3,9 +3,22 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"oidc-client": "^1.10.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-scripts": "3.4.3"
+		"react-scripts": "3.4.3",
+		"styled-components": "^5.2.0",
+		"twin.macro": "^1.10.0"
+	},
+	"babelMacros": {
+		"twin": {
+			"config": "src/tailwind.config.js",
+			"preset": "styled-components",
+			"autoCssProp": true,
+			"debugProp": true,
+			"debugPlugins": false,
+			"debug": false
+		}
 	},
 	"scripts": {
 		"start": "react-scripts start",
