--- a/ChatGroup/src/ChatGroup/ClientApp/package.json
+++ b/ChatGroup/src/ChatGroup/ClientApp/package.json
@@ -6,6 +6,7 @@
 		"oidc-client": "^1.10.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"styled-components": "^5.2.0",
 		"twin.macro": "^1.10.0"
