--- a/ChatGroup/src/ChatGroup/ClientApp/package.json
+++ b/ChatGroup/src/ChatGroup/ClientApp/package.json
@@ -3,11 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@tailwindcss/custom-forms": "^0.2.1",
 		"oidc-client": "^1.10.1",
-		"react": "^16.14.0",
-		"react-dom": "^16.14.0",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.3",
+		"react-scripts": "3.4.4",
 		"styled-components": "^5.2.0",
 		"twin.macro": "^1.11.0"
 	},
